RAFD-52: Update the README